# janux-auth-gateway

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  Dockerfile  IMPROV.md  MANIFEST.in  README.md  deploy_janux_stack.sh  docker-compose.mongo.yml  docker-compose.postgres.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  setup_docker_secrets.sh  tox.ini
.github/workflows/: bandit.yml  build-and-push-docker.yml  changelog.yml  codeql.yml  publish-material-docs.yml  publish-pypi.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
SECURITY/: index.html
SUPPORT/: index.html
api_reference/: index.html
authentication/: .dockerignore  Dockerfile  README.md  auth_tree.txt  pyproject.toml
authentication/app/: main.py
authentication/app/auth/: jwt.py  passwords.py
authentication/app/config/: config.py
authentication/app/database/: mongoDB.py
authentication/app/dependencies/: __init__.py
authentication/app/errors/: handlers.py
authentication/app/logging/: custom_logger.py  requests.py
authentication/app/models/: __init__.py  admin.py  user.py
authentication/app/routers/: admin_router.py  auth_router.py  base_router.py  user_router.py
authentication/app/schemas/: response.py  token.py  user.py
authentication/app/utils/: helper_functions.py
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: README.md  __init__.py  database.py  main.py
backend/app/auth/: jwt.py  passwords.py
backend/app/config/: __init__.py  config.py
backend/app/database/: mongoDB.py
backend/app/errors/: handlers.py
backend/app/logging/: config.py  custom_logger.py  requests.py
backend/app/models/: admin.py  feedback.py  model.py  user.py
backend/app/routers/: __init__.py  auth_router.py  base_router.py  feedback_router.py  user_router.py
backend/app/schemas/: __init__.py  feedback.py  response.py  user.py
backend/app/services/: submit.py
backend/app/utils/: __init__.py  passwords.py
configuration/: index.html
docs/: CONTRIBUTING.md  LICENSE.md  SECURITY.md  SUPPORT.md  api_reference.md  configuration.md  index.md  installation.md  prerequisites.md  usage.md
frontend/: DockerFile  vite.config.ts
init/: init.sql
installation/: index.html
janux_auth_gateway/: __init__.py  main.py
janux_auth_gateway/auth/: __init__.py  jwt.py  passwords.py
janux_auth_gateway/config/: config.py
janux_auth_gateway/database/: mongoDB.py
janux_auth_gateway/debug/: config.py  custom_logger.py
janux_auth_gateway/errors/: handlers.py
janux_auth_gateway/logging/: middleware.py
janux_auth_gateway/models/: __init__.py  admin.py  admin_model.py  roles.py  user.py  user_model.py
janux_auth_gateway/routers/: admin_router.py  auth_router.py  base_router.py  user_router.py
janux_auth_gateway/schemas/: __init__.py  response.py  response_schema.py  token.py  user.py  user_schema.py
prerequisites/: index.html
search/: search_index.json
secrets/: JANUX_ENCRYPTION_KEY.example  MONGO_ADMIN_FULLNAME.example  MONGO_ADMIN_PASSWORD.example  mongo_admin_email.example  mongo_uri.example  mongo_user_email.example  mongo_user_fullname.example  mongo_user_password.example  postgres_admin_password.example  postgres_admin_role.example  postgres_uri.example  private.example.pem  public.example.pem  secret.example.txt
tests/: test_main.py
tests/auth/: test_jwt.py  test_key_pairs.py  test_passwords.py
tests/config/: test_config.py
tests/database/: test_mongoDB.py
tests/models/: test_admin.py  test_admin_model.py  test_roles.py  test_roles_model.py  test_user.py  test_user_model.py
tests/models/mongoDB/: test_admin_model.py  test_user_model.py
tests/routers/: test_admin_router.py  test_auth_router.py  test_base_router.py  test_user_router.py
tests/schemas/: test_response.py  test_response_schema.py  test_token.py  test_token_schema.py  test_user.py  test_user_schema.py  test_user_schema_mongo.py
usage/: index.html
