[tool.poetry]
name = "JANUX-auth-gateway"
version = "0.1.0"
description = "Authentication microservice of JANUX-auth-gateway for user management"
authors = ["FOX Techniques <ali.nabbi@fox-techniques.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "janux_auth_gateway" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
beanie = "^1.29.0"
motor = "3.6.1"
pymongo = "4.9"
bcrypt = "^4.2.1"
python-json-logger = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
git-changelog = "^2.5.3"
mkdocs-material = "^9.5.50"
tox = "^4.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
