[tool.poetry]
name = "JANUX-authentication"
version = "0.1.0"
description = "Authentication microservice of JANUX-auth-gateway for user management"
authors = ["FOX Techniques <ali.nabbi@fox-techniques.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
bcrypt = "^4.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
beanie = "^1.29.0"
motor = "3.2.0"
pymongo = "4.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
