[tool.poetry]
name = "JANUX-backend"
version = "0.1.0"
description = "Backend microservice of JANUX-auth-gateway for feedback and messaging services"
authors = ["FOX Techniques  <ali.nabbi@fox-techniques.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
pymongo = "4.9"
motor = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
